<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- O-Touch settings -->
    <string name="backpad_panel_title">O-Touch settings</string>
    <string name="backpad_panel_summary">Configure O-Touch</string>

    <string name="touchpad_enable_title">Enable O-Touch</string>
    <string name="touchpad_enable_summary">Rear touchpad to navigate the phone</string>
    <string name="touchpad_long_press_title">Long press to launch camera</string>
    <string name="touchpad_long_press_summary">Long press on the touchpad will launch the camera application</string>
    <string name="touchpad_double_tap_title">Double tap to capture</string>
    <string name="touchpad_double_tap_summary">While in camera, double tap to capture image</string>

    <!-- Gesture shortcuts -->
    <string name="screen_gestures_panel_title">Gesture shortcuts</string>
    <string name="screen_gestures_panel_summary">Use gestures while the screen is off</string>

    <string name="touchscreen_double_tap_gesture_title">Wake device</string>
    <string name="touchscreen_double_tap_gesture_summary">Double tap to wake the device</string>
    <string name="touchscreen_camera_gesture_title">Camera</string>
    <string name="touchscreen_camera_gesture_summary">Draw a circle to activate camera</string>
    <string name="touchscreen_music_gesture_title">Music</string>
    <string name="touchscreen_flashlight_gesture_title">Flashlight</string>
    <string name="touchscreen_flashlight_gesture_summary">Draw a \'V\' to toggle flashlight</string>
    <string name="touchscreen_music_gesture_summary">Use gestures to control music playback \n
    • Two fingers vertically to play/pause\n
    • Draw left arrow for previous track\n
    • Draw right arrow for next track</string>

    <!-- O-Click settings -->
    <string name="oclick_panel_title">O-Click settings</string>
    <string name="oclick_panel_summary">Configure O-Click device</string>

    <string name="oclick_connect_string">Connect</string>
    <string name="oclick_disconnect_string">Disconnect</string>
    <string name="oclick_dialog_title">O-Click</string>
    <string name="oclick_dialog_connecting_message">Attempting to pair</string>

    <string name="oclick_take_snapshot_title">Remote camera shutter</string>
    <string name="oclick_take_snapshot_summary">Single click to take picture</string>
    <string name="oclick_find_my_phone_title">Phone locator</string>
    <string name="oclick_find_my_phone_summary">Double click to find phone</string>
    <string name="oclick_fence_title">Proximity alert</string>
    <string name="oclick_fence_summary">Alert when not near phone</string>
    <string name="oclick_disconnect_alert_title">Out of range alert</string>
    <string name="oclick_disconnect_alert_summary">Alert when outside of reach</string>

    <string name="alert_category_title">Alerts</string>
    <string name="action_category_title">Actions</string>
</resources>
